--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@types/react-router-dom": "^5.3.2",
     "@web3-react/core": "^6.1.9",
     "axios": "^0.24.0",
+    "bootstrap": "^5.2.2",
     "lodash": "^4.17.20",
     "next": "^12.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
     "react-intl-universal": "^2.4.8",
     "react-redux": "^7.2.6",
