--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "next start -p 6111"
   },
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
+    "@babel/plugin-transform-typescript": "^7.20.2",
     "@ethersproject/providers": "^5.5.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
@@ -23,6 +25,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
+    "@types/styled-system": "^5.1.15",
     "@web3-react/core": "^6.1.9",
     "axios": "^0.24.0",
     "bootstrap": "^5.2.2",
@@ -38,6 +41,7 @@
     "redux-localstorage-simple": "^2.4.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
+    "styled-system": "^5.1.5",
     "swiper": "^7.2.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
