--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "^12.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-intl-universal": "^2.4.8",
     "react-redux": "^7.2.6",
