--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@web3-react/core": "^6.1.9",
     "axios": "^0.24.0",
     "bootstrap": "^5.2.2",
+    "iphone-inline-video": "^2.2.2",
     "lodash": "^4.17.20",
     "next": "^12.0.1",
     "react": "^17.0.2",
